@@ -1,0 +1,34 @@
+# (Be in -*- python -*- mode.)
+
+# Fix a problem with multiply-defined symbols by ignoring one copy of
+# each symbol.
+
+from cvs2svn_lib.symbol_transform import SymbolMapper
+
+execfile('cvs2svn-example.options')
+
+name = 'invalid-symbol'
+
+ctx.output_option = NewRepositoryOutputOption(
+    'cvs2svn-tmp/%s--options=cvs2svn-ignore.options-svnrepos' % (name,),
+    )
+
+del run_options.projects[:]
+
+filename = 'test-data/%s-cvsrepos/file.txt,v' % (name,)
+symbol_mapper = SymbolMapper([
+    (filename, 'SYMBOL', '1', None),
+    ])
+
+run_options.add_project(
+    Project(
+        r'test-data/%s-cvsrepos' % (name,),
+        'trunk',
+        'branches',
+        'tags',
+        symbol_transforms=[
+            symbol_mapper,
+            ],
+        )
+    )
+
